--- a/app/src/main/res/layout/activity_kanji_detail.xml
+++ b/app/src/main/res/layout/activity_kanji_detail.xml
@@ -11,16 +11,25 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <ImageView
+        android:id="@+id/replay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/scrollView"
+        android:layout_marginLeft="8dp"
+        android:src="@drawable/ic_replay"/>
+
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="230dp"
         android:layout_below="@id/toolbar"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="10dp" />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/videoView">
