--- a/app/src/main/res/layout/items_kanji_example.xml
+++ b/app/src/main/res/layout/items_kanji_example.xml
@@ -4,28 +4,35 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp">
 
-    <TextView
-        android:id="@+id/hira"
-        android:layout_width="175dp"
-        android:layout_height="wrap_content"
-        android:text="one"
-        android:textColor="@color/colorPrimaryDark_v2"
-        android:textSize="16dp" />
+    <RelativeLayout
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/mean"
-        android:layout_width="175dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/hira"
-        android:layout_marginLeft="16dp"
-        android:text="one"
-        android:textColor="@color/black"
-        android:textSize="16dp" />
+        <TextView
+            android:id="@+id/hira"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:text="one"
+            android:textColor="@color/colorPrimaryDark_v2"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/mean"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/hira"
+            android:layout_marginLeft="16dp"
+            android:text="one"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/hira"
+        android:layout_below="@+id/text"
         android:layout_marginTop="6dp"
         android:background="@color/grey_line"/>
 
