--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -13,4 +13,10 @@
         android:id="@+id/translate"
         android:icon="@drawable/ic_language_translate"
         android:title="Translate" />
+
+    <item
+        android:id="@+id/chatbot"
+        android:icon="@drawable/ic_talking"
+        android:title="Chatbot" />
+
 </menu>
