--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <!--<color name="colorPrimary">#76BF72</color>-->
     <color name="colorPrimary">#5ECB6D</color>
     <color name="colorPrimaryDark_v2">#303F9F</color>
-    <color name="colorPrimaryDark">#1f6b5b</color>
+    <color name="colorPrimaryDark">#469852</color>
     <color name="primary_light">#E5E4D7</color>
     <color name="black">#000</color>
     <color name="white">#FFF</color>
