--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -17,6 +17,6 @@
     <item
         android:id="@+id/chatbot"
         android:icon="@drawable/ic_talking"
-        android:title="Chatbot" />
+        android:title="Chat with Haru" />
 
 </menu>
