--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#000</color>
     <color name="white">#FFF</color>
     <color name="grey">#ececec</color>
-    <color name="grey_line">#AAAAAA</color>
+    <color name="grey_line_2">#AAAAAA</color>
+    <color name="grey_line">#469852</color>
     <color name="red">#ff0000</color>
     <color name="splash">#5BB7B7</color>
 </resources>
