--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,40 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
     tools:context="prm3101.group_assignment.fragment.SearchFragment">
 
-    <EditText
-        android:id="@+id/inputSearch"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:drawableLeft="@android:drawable/ic_menu_search"
-        android:drawablePadding="@dimen/base_8"
-        android:hint="Input word to search"
-        android:layout_marginLeft="@dimen/base_10"
-        android:layout_marginRight="@dimen/base_10"
-        android:layout_centerHorizontal="true"
-        android:inputType="text"
-        android:imeOptions="actionSearch"
-        android:layout_marginTop="10dp"
-        android:textAppearance="@style/largeEdittextText"
-        android:background="@drawable/rounded_edittext"/>
-
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/chatData"
         android:layout_width="match_parent"
-        android:id="@+id/searchResult"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_below="@+id/inputSearch"
-        android:layout_marginLeft="@dimen/base_10"
-        android:layout_marginRight="@dimen/base_10"
-        android:layout_marginTop="@dimen/base_10">
+        android:layout_height="match_parent"
+        android:layout_above="@id/inputView"
+        android:layout_below="@id/toolbar"
+        android:background="#f4f6f7"
+        android:clipToPadding="false"
+        android:paddingBottom="4dp"
+        android:paddingTop="10dp" />
 
-    </android.support.v7.widget.RecyclerView>
+    <RelativeLayout
+        android:id="@+id/inputView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="4dp"
+        android:background="#f4f6f7">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_toStartOf="@+id/voiceBtn"
+            android:background="@drawable/back_addtask"
+            android:elevation="2dp">
+
+            <EditText
+                android:id="@+id/inputText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:background="#fff"
+                android:hint="Type a Message"
+                android:minHeight="50dp"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/voiceBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/back_fab"
+            android:elevation="4dp">
+
+            <ImageView
+                android:id="@+id/fab_img"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_mic_white_24dp"
+                android:tint="#fff" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
+
+
+
+
+
 
 
 
