--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="130dp"
-              android:background="@color/colorPrimary"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="130dp"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Học tiếng Nhật"
         android:padding="20dp"
-        android:textSize="24dp"
-        />
+        android:text="Học tiếng Nhật"
+        android:textSize="24dp" />
+
 </LinearLayout>
