--- a/app/src/main/res/layout/fragment_hira_kata.xml
+++ b/app/src/main/res/layout/fragment_hira_kata.xml
@@ -3,18 +3,41 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
+    <!--<Spinner-->
+        <!--android:id="@+id/spinner"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:spinnerMode="dropdown"/>-->
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="8dp"
-        android:spinnerMode="dropdown"/>
+        android:orientation="horizontal"
+        android:layout_margin="8dp">
+
+        <RadioButton
+            android:id="@+id/rdHiragana"
+            android:checked="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hiragana"/>
+
+        <RadioButton
+            android:id="@+id/rdKatakana"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="katakana"
+            android:layout_marginStart="10dp"/>
+
+    </RadioGroup>
 
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/spinner"
+        android:layout_below="@id/radioGroup"
         android:id="@+id/gridView"
         android:numColumns="5"
         android:gravity="center"/>
