--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,9 +5,9 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home" />
 
-    <item android:id="@+id/search_word"
-          android:icon="@drawable/ic_search_black_24dp"
-          android:title="Search"/>
+    <item android:id="@+id/kanji"
+          android:icon="@drawable/ic_kanji"
+          android:title="Kanji"/>
 
     <item
         android:id="@+id/translate"
@@ -16,7 +16,7 @@
 
     <item
         android:id="@+id/chatbot"
-        android:icon="@drawable/ic_talking"
-        android:title="Chat with Haru" />
+        android:icon="@drawable/ic_kabuki"
+        android:title="Haru" />
 
 </menu>
