--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="grey_line">#469852</color>
     <color name="red">#ff0000</color>
     <color name="splash">#5BB7B7</color>
+    <color name="grey_background">#CAD5C4</color>
+
 </resources>
